[package]
name = "windows_registry_fixer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.0", features = ["derive"] }
winreg = "0.50.0"
memmap = "0.7.0"
eframe = "0.22.0"
rfd = "0.11.0"  # For native file dialogs

[dependencies.winapi]
version = "0.3.9"
features = ["winuser", "windef"]
