[package]
name = "windows_registry_fixer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.3.0", features = ["derive"] }
winreg = "0.52.0"
memmap = "0.7.0"
eframe = "0.22.0"
rfd = "0.15.0"  # For native file dialogs
image = "0.25.4"  # For loading the logo image

[dependencies.winapi]
version = "0.3.9"
features = ["winuser", "windef"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[build-dependencies]
winres = "0.1.12"
